<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.main.fragmentpaquets.DescriptionFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RelativeLayout
                android:id="@+id/descriptionModel"
                android:layout_width="match_parent"
                android:layout_height="499dp"
                android:layout_marginBottom="5dp">

                <ImageView
                    android:id="@+id/img"
                    android:layout_width="match_parent"
                    android:layout_height="250dp"/>

                <TextView
                    android:id="@+id/info"
                    android:layout_width="190dp"
                    android:layout_height="26dp"
                    android:layout_below="@+id/img"
                    android:layout_marginTop="13dp"
                    android:paddingStart="30dp"
                    android:paddingLeft="30dp"
                    android:text="@string/info"
                    android:textSize="@dimen/text_size"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/infoBrand"
                    android:layout_width="86dp"
                    android:layout_height="26dp"
                    android:layout_below="@+id/info"
                    android:layout_marginTop="8dp"
                    android:paddingStart="30dp"
                    android:paddingLeft="30dp"
                    android:text="@string/info_brand"
                    android:textSize="@dimen/text_size"
                    android:textStyle="bold" />


                <TextView
                    android:id="@+id/t1"
                    android:layout_width="wrap_content"
                    android:layout_height="26dp"
                    android:layout_below="@+id/info"
                    android:layout_marginStart="87dp"
                    android:layout_marginLeft="87dp"
                    android:layout_marginTop="8dp"
                    android:layout_toEndOf="@id/infoBrand"
                    android:layout_toRightOf="@id/infoBrand"
                    android:text="@string/info"
                    android:textSize="@dimen/text_size" />

                <TextView
                    android:id="@+id/infoModel"
                    android:layout_width="wrap_content"
                    android:layout_height="26dp"
                    android:layout_below="@+id/infoBrand"
                    android:layout_marginTop="8dp"
                    android:paddingStart="30dp"
                    android:paddingLeft="30dp"
                    android:text="@string/info_model"
                    android:textSize="@dimen/text_size"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/t2"
                    android:layout_width="wrap_content"
                    android:layout_height="26dp"
                    android:layout_below="@+id/t1"
                    android:layout_marginStart="91dp"
                    android:layout_marginLeft="91dp"
                    android:layout_marginTop="9dp"
                    android:layout_toEndOf="@id/infoModel"
                    android:layout_toRightOf="@id/infoModel"
                    android:text="@string/info"
                    android:textSize="@dimen/text_size" />

                <TextView
                    android:id="@+id/infoYear"
                    android:layout_width="wrap_content"
                    android:layout_height="26dp"
                    android:layout_below="@+id/infoModel"
                    android:layout_marginTop="8dp"
                    android:paddingStart="30dp"
                    android:paddingLeft="30dp"
                    android:text="@string/info_year"
                    android:textSize="@dimen/text_size"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/t3"
                    android:layout_width="wrap_content"
                    android:layout_height="26dp"
                    android:layout_below="@+id/t2"
                    android:layout_marginStart="96dp"
                    android:layout_marginLeft="96dp"
                    android:layout_marginTop="9dp"
                    android:layout_toEndOf="@id/infoYear"
                    android:layout_toRightOf="@id/infoYear"
                    android:text="@string/info"
                    android:textSize="@dimen/text_size" />

                <TextView
                    android:id="@+id/infoKilo"
                    android:layout_width="wrap_content"
                    android:layout_height="26dp"
                    android:layout_below="@+id/infoYear"
                    android:layout_marginTop="8dp"
                    android:paddingStart="30dp"
                    android:paddingLeft="30dp"
                    android:text="@string/info_kilometer"
                    android:textSize="@dimen/text_size"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/t4"
                    android:layout_width="wrap_content"
                    android:layout_height="26dp"
                    android:layout_below="@+id/t3"
                    android:layout_marginStart="62dp"
                    android:layout_marginLeft="62dp"
                    android:layout_marginTop="9dp"
                    android:layout_toEndOf="@id/infoKilo"
                    android:layout_toRightOf="@id/infoKilo"
                    android:text="@string/info"
                    android:textSize="@dimen/text_size" />

                <TextView
                    android:id="@+id/infoTransmission"
                    android:layout_width="wrap_content"
                    android:layout_height="26dp"
                    android:layout_below="@+id/infoKilo"
                    android:layout_marginTop="8dp"
                    android:paddingStart="30dp"
                    android:paddingLeft="30dp"
                    android:text="@string/info_transmission"
                    android:textSize="@dimen/text_size"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/t5"
                    android:layout_width="wrap_content"
                    android:layout_height="26dp"
                    android:layout_below="@+id/t4"
                    android:layout_marginStart="52dp"
                    android:layout_marginLeft="52dp"
                    android:layout_marginTop="7dp"
                    android:layout_toEndOf="@id/infoTransmission"
                    android:layout_toRightOf="@id/infoTransmission"
                    android:text="@string/info"
                    android:textSize="@dimen/text_size" />

                <TextView
                    android:id="@+id/infoPrix"
                    android:layout_width="wrap_content"
                    android:layout_height="26dp"
                    android:layout_below="@+id/infoTransmission"
                    android:layout_marginTop="8dp"
                    android:paddingStart="30dp"
                    android:paddingLeft="30dp"
                    android:text="@string/sale_price"
                    android:textSize="@dimen/text_size"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/t6"
                    android:layout_width="wrap_content"
                    android:layout_height="26dp"
                    android:layout_below="@+id/infoTransmission"
                    android:layout_marginStart="114dp"
                    android:layout_marginLeft="114dp"
                    android:layout_marginTop="5dp"
                    android:layout_toEndOf="@id/infoPrix"
                    android:layout_toRightOf="@id/infoPrix"
                    android:text="@string/info"
                    android:textSize="@dimen/text_size" />
            </RelativeLayout>
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#DCDCDC"/>

            <RelativeLayout
                android:id="@+id/salorDescription"
                android:layout_width="match_parent"
                android:layout_height="220dp">

                <TextView
                    android:id="@+id/salor"
                    android:layout_width="wrap_content"
                    android:layout_height="26dp"
                    android:layout_marginTop="11dp"
                    android:paddingStart="30dp"
                    android:paddingLeft="30dp"
                    android:text="@string/vendor"
                    android:textSize="@dimen/text_size"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/salorName"
                    android:layout_width="wrap_content"
                    android:layout_height="26dp"
                    android:layout_below="@+id/salor"
                    android:layout_marginTop="8dp"
                    android:paddingStart="30dp"
                    android:paddingLeft="30dp"
                    android:text="@string/vendor_name"
                    android:textSize="@dimen/text_size"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/t7"
                    android:layout_width="wrap_content"
                    android:layout_height="26dp"
                    android:layout_below="@id/salor"
                    android:layout_marginStart="113dp"
                    android:layout_marginLeft="113dp"
                    android:layout_marginTop="8dp"
                    android:layout_toEndOf="@id/salorName"
                    android:layout_toRightOf="@id/salorName"
                    android:text="@string/info"
                    android:textSize="@dimen/text_size" />

                <TextView
                    android:id="@+id/salorCouriel"
                    android:layout_width="wrap_content"
                    android:layout_height="26dp"
                    android:layout_below="@+id/salorName"
                    android:layout_marginTop="8dp"
                    android:paddingStart="30dp"
                    android:paddingLeft="30dp"
                    android:text="@string/vendor_mail"
                    android:textSize="@dimen/text_size"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/t8"
                    android:layout_width="wrap_content"
                    android:layout_height="26dp"
                    android:layout_below="@+id/salorName"
                    android:layout_marginStart="92dp"
                    android:layout_marginLeft="92dp"
                    android:layout_marginTop="8dp"
                    android:layout_toEndOf="@id/salorCouriel"
                    android:layout_toRightOf="@id/salorCouriel"
                    android:text="@string/info"
                    android:textSize="@dimen/text_size" />

                <TextView
                    android:id="@+id/modelForOwner"
                    android:layout_width="wrap_content"
                    android:layout_height="26dp"
                    android:layout_below="@+id/salorCouriel"
                    android:layout_marginTop="8dp"
                    android:paddingStart="30dp"
                    android:paddingLeft="30dp"
                    android:text="@string/owner"
                    android:textSize="@dimen/text_size"
                    android:textStyle="bold" />

                <Button
                    android:id="@+id/button"
                    android:layout_width="300dp"
                    android:layout_height="55dp"
                    android:layout_below="@+id/t9"
                    android:layout_marginTop="10dp"
                    android:layout_marginLeft="30dp"
                    android:background="#20639B"
                    android:textColor="@color/cardview_light_background"
                    android:layout_marginRight="30dp"
                    android:layout_centerHorizontal="true"
                    android:layout_
                    android:text="@string/info_contact" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginTop="10dp"
                    android:layout_below="@+id/button"
                    android:background="#DCDCDC" />

                <TextView
                    android:id="@+id/t9"
                    android:layout_width="237dp"
                    android:layout_height="29dp"
                    android:layout_below="@+id/salorCouriel"
                    android:layout_marginStart="68dp"
                    android:layout_marginLeft="68dp"
                    android:layout_marginTop="2dp"
                    android:layout_toEndOf="@id/modelForOwner"
                    android:layout_toRightOf="@id/modelForOwner"
                    android:text="@string/info"
                    android:textSize="@dimen/text_size" />

            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/textDescription"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                    <TextView
                        android:id="@+id/desc"
                        android:layout_width="wrap_content"
                        android:layout_height="26dp"
                        android:layout_marginTop="8dp"
                        android:paddingStart="30dp"
                        android:paddingLeft="30dp"
                        android:text="@string/car_desc"
                        android:textSize="@dimen/text_size"
                        android:textStyle="bold"/>

                <ScrollView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/desc"
                    android:layout_marginTop="-1dp">

                    <TextView
                    android:id="@+id/car_desc"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="30dp" />
            </ScrollView>
            </RelativeLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>