<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constraintLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.main.Sales"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:layout_marginTop="15dp"
                android:paddingStart="30dp"
                android:paddingLeft="30dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/form_model"
                android:textStyle="bold"/>
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#DCDCDC"/>
            <RelativeLayout
                android:id="@+id/form_choice"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent">
                <TextView
                    android:id="@+id/text_list"
                    android:layout_width="match_parent"
                    android:textSize="20sp"
                    android:layout_marginLeft="30dp"
                    android:gravity="center_vertical"
                    android:layout_height="50dp"/>
                <ImageView
                    android:layout_width="40dp"
                    android:layout_height="38dp"
                    android:layout_marginLeft="360dp"
                    android:layout_marginTop="5dp"
                    android:src="@drawable/ic_keyboard_arrow_right_black_24dp" />


            </RelativeLayout>
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#DCDCDC"/>
            <TextView
                android:layout_width="wrap_content"
                android:paddingStart="30dp"
                android:paddingLeft="30dp"
                android:layout_height="wrap_content"
                android:text="@string/info_year"
                android:textStyle="bold"/>
            <RelativeLayout
                android:id="@+id/form_year"
                android:layout_width="match_parent"
                android:paddingLeft="30dp"
                android:layout_height="wrap_content">
                <TextView
                    android:id="@+id/choice_year"
                    android:layout_marginTop="8dp"
                    android:layout_width="150dp"
                    android:gravity="center_vertical"
                    android:layout_height="40dp"
                    android:textSize="20sp"
                    android:layout_marginBottom="8dp"/>

                <ImageView
                    android:layout_width="40dp"
                    android:layout_height="38dp"
                    android:layout_marginLeft="110dp"
                    android:layout_marginTop="8dp"
                    android:src="@drawable/ic_arrow_drop_down_black_24dp" />


            </RelativeLayout>
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:id="@+id/kilo"
                    android:layout_width="wrap_content"
                    android:paddingStart="30dp"
                    android:paddingLeft="30dp"
                    android:layout_marginTop="8dp"
                    android:layout_height="wrap_content"
                    android:text="@string/info_kilometer"
                    android:textStyle="bold"/>
                <EditText
                    android:id="@+id/edit_year"
                    android:layout_width="150dp"
                    android:layout_marginLeft="30dp"
                    android:textSize="18sp"
                    android:inputType="number"
                    android:layout_below="@id/kilo"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="8dp"
                    android:layout_height="wrap_content">
                </EditText>
            </RelativeLayout>
            <TextView
                android:id="@+id/trans_type"
                android:layout_width="wrap_content"
                android:paddingStart="30dp"
                android:paddingLeft="30dp"
                android:layout_height="wrap_content"
                android:text="@string/form_trans"
                android:textStyle="bold"/>

            <RelativeLayout
                android:id="@+id/trans_choice"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <Spinner
                    android:id="@+id/spinner"
                    android:layout_width="353dp"
                    android:layout_height="59dp"
                    android:layout_marginStart="30dp"
                    android:layout_marginLeft="30dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="3dp"
                    android:layout_marginRight="30dp"
                    android:layout_marginBottom="10dp"
                    android:background="@drawable/spinner" />

                <ImageView
                    android:layout_width="40dp"
                    android:layout_height="38dp"
                    android:layout_marginLeft="333dp"
                    android:layout_marginTop="22dp"
                    android:src="@drawable/ic_arrow_drop_down_black_24dp" />


            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/thePrice"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:paddingStart="30dp"
                    android:paddingLeft="30dp"
                    android:text="@string/sale_price"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/edit_price"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/thePrice"
                    android:layout_marginLeft="30dp"
                    android:layout_marginTop="3dp"
                    android:inputType="number"
                    android:textSize="18sp" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:id="@+id/rel_textcheck"
                    android:layout_width="wrap_content"
                    android:paddingStart="30dp"
                    android:paddingLeft="30dp"
                    android:layout_marginTop="8dp"
                    android:textAlignment="gravity"
                    android:gravity="center"
                    android:layout_height="30dp"
                    android:text="@string/form_sale"
                    android:textSize="@dimen/text_size"/>

                <CheckBox
                    android:id="@+id/item_switch"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:button="@null"
                    android:layout_toEndOf="@id/rel_textcheck"
                    android:layout_toRightOf="@id/rel_textcheck"
                    android:layout_marginLeft="10dp"
                    app:buttonTint="@color/colorAccent"
                    android:background="?android:attr/listChoiceIndicatorMultiple"
                    android:layout_marginTop="6dp"/>

            </RelativeLayout>

            <Button
                android:id="@+id/edit_button"
                android:layout_width="256dp"
                android:layout_height="46dp"
                android:textStyle="bold"
                android:textSize="18sp"
                android:layout_marginTop="20dp"
                android:text="@string/form_button"
                android:layout_gravity="center_horizontal"/>

        </LinearLayout>
    </ScrollView>

    <FrameLayout
        android:id="@+id/contaner"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    </FrameLayout>


</LinearLayout>